--- a/Lab7/Views/Shared/_Layout.cshtml
+++ b/Lab7/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <link href="@Url.Content("~/Content/Style.css")" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div class="navbar navbar-default navbar-fixed-top">
+    <div class="navbar navbar-default navbar-fixed-top" style="background-color:black; color:white">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
